Fix: color contrast in application entry when red

--- a/house_of_refuge/frontend/src/styles/resources.scss
+++ b/house_of_refuge/frontend/src/styles/resources.scss
@@ -177,6 +177,7 @@ a {
 .sub-in-progress-host-coming {
   background-color: $our-red !important;
   border-color: $our-red;
+  color: #fff;
 }
 
 .sub-in-progress {
